[package]
name = "crczoo"
version = "0.1.0"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "CRC Zoo: A collection of Cyclic Redundancy Check (CRC) algorithms"
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/"
repository = "https://github.com/visioncortex/crczoo/"
categories = ["algorithms"]
keywords = ["crc", "crc5", "crc8", "crc16", "crc32"]

[lib]
crate-type = ["rlib"]
