[package]
name = "symcode-webapp"
version = "0.1.0"
authors = ["shpun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bit-vec = "0.6.3"
cfg-if = "0.1"
console_log = { version = "0.2", features = ["color"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
symcode = { path = "../symcode" }
visioncortex = { path = "../visioncortex" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
]